added git deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-starter",
+  "name": "react-training-poc",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://sirius93.github.io/react-training-poc",
